--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
 @import "partials/mixins";
 @import "partials/pseudo";
 @import "partials/Inheritance";
-@import "partials/colors";
+@import "partials/variables";
 @import "partials/BreakPoints";
 
 :root {
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     outline: none;
     list-style: none;
+
 }
 
 html {
@@ -31,6 +32,7 @@ body {
     overflow-x: hidden;
     color-scheme: light;
 
+
     background-color: $mainBackgroundColor;
     color: $mainTextColor;
     font-family: var(--cairo-font);
@@ -39,6 +41,7 @@ body {
     > main {
         flex: 1;
         min-height: 100dvh;
+        padding-top: 64px;
     }
 }
 
