Create footer component

--- a/src/components/client/global/Header/LinksComponent/style.module.scss
+++ b/src/components/client/global/Header/LinksComponent/style.module.scss
@@ -34,4 +34,20 @@
             display: none;
         }
     }
+    &.inFooter {
+        flex-direction: row;
+        width: initial;
+
+        .listItem {
+            width: initial;
+        }
+
+        @include responsive("md") {
+            flex-direction: column;
+        }
+    }
+
+    @include responsive("md") {
+        gap: 12px;
+    }
 }
