--- a/src/components/client/global/Header/style.module.scss
+++ b/src/components/client/global/Header/style.module.scss
@@ -1,4 +1,3 @@
-@import "@/styles/partials/variables";
 @import "@/styles/partials/mixins";
 @import "@/styles/partials/variables";
 
@@ -6,7 +5,9 @@
     display: flex;
 
     .appBar {
-        background-color: $mainBackgroundColor;
+        background-color: rgba(255, 255, 255, 0.95);
+        -webkit-backdrop-filter: blur(4px);
+        backdrop-filter: blur(4px);
         box-shadow: none;
 
         .toolbar {
