--- a/src/components/client/global/Header/style.module.scss
+++ b/src/components/client/global/Header/style.module.scss
@@ -15,6 +15,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 0;
+            min-height: 80px;
         }
     }
 }
