--- a/src/components/client/global/Header/LinksComponent/style.module.scss
+++ b/src/components/client/global/Header/LinksComponent/style.module.scss
@@ -26,6 +26,7 @@
                 height: 2px;
                 background-color: $secondaryTextColor;
                 transition: all 0.3s ease-in-out;
+                border-radius: 2px;
             }
             &:hover {
                 color: $secondaryTextColor;
