--- a/src/components/client/Home/Projects/style.module.scss
+++ b/src/components/client/Home/Projects/style.module.scss
@@ -28,6 +28,9 @@
 
                 .imagesContainer {
                     height: 250px;
+                    > div {
+                        height: 100%;
+                    }
                     img {
                         width: 100%;
                         height: 100%;
@@ -37,11 +40,20 @@
 
                 .textContainer {
                     padding: 15px;
-                    height: 100px;
+                    height: 120px;
                     box-sizing: content-box;
 
-                    p {
+                    .title {
                         font-size: 16px;
+                        display: -webkit-box;
+                        text-overflow: ellipsis;
+                        -webkit-line-clamp: 1;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                    }
+
+                    .description {
+                        font-size: 14px;
                         font-weight: 400;
                         display: -webkit-box;
                         text-overflow: ellipsis;
