--- a/src/components/client/Home/Banner/style.module.scss
+++ b/src/components/client/Home/Banner/style.module.scss
@@ -2,12 +2,38 @@
 @import "@/styles/partials/variables";
 
 .banner {
+    position: relative;
     padding: 60px 0;
     height: calc(100dvh - 80px);
     background: linear-gradient(to right, $darkBackgroundColor, #082753);
     color: $lightColor;
 
+    .overlay {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 18, 47, 0.8);
+        z-index: 1;
+    }
+
+    .background {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
     .container {
+        position: relative;
+        z-index: 2;
         @include container();
         height: 100%;
         display: flex;
