Finalize client part

--- a/src/components/client/Home/Achievements/style.module.scss
+++ b/src/components/client/Home/Achievements/style.module.scss
@@ -31,8 +31,7 @@
             flex-direction: column;
             color: $mainTextColor;
 
-            .number,
-            .text {
+            p {
                 font-size: 24px;
                 font-weight: 700;
                 text-align: center;
