--- a/src/components/client/Home/Services/style.module.scss
+++ b/src/components/client/Home/Services/style.module.scss
@@ -2,10 +2,6 @@
 @import "@/styles/partials/variables";
 
 .content {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 15px;
-
     .card {
         display: flex;
         align-items: center;
@@ -22,19 +18,11 @@
             font-size: 18px;
             font-weight: 400;
             text-align: center;
+            display: -webkit-box;
+            text-overflow: ellipsis;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
-    }
-
-    @include responsive("lg") {
-        grid-template-columns: repeat(4, 1fr);
-    }
-    @include responsive("md") {
-        grid-template-columns: repeat(3, 1fr);
-    }
-    @include responsive("sm") {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    @include responsive("xs") {
-        grid-template-columns: repeat(1, 1fr);
     }
 }
