--- a/src/components/client/global/Header/LinksComponent/style.module.scss
+++ b/src/components/client/global/Header/LinksComponent/style.module.scss
@@ -21,7 +21,7 @@
             &::before {
                 content: "";
                 position: absolute;
-                bottom: 0;
+                bottom: -2px;
                 width: 0;
                 height: 2px;
                 background-color: $secondaryTextColor;
