--- a/src/components/client/global/SectionTitle/style.module.scss
+++ b/src/components/client/global/SectionTitle/style.module.scss
@@ -14,7 +14,7 @@
             content: "";
             position: absolute;
             right: 25%;
-            bottom: 0;
+            bottom: -4px;
             width: 50%;
             height: 2px;
             background-color: $secondaryTextColor;
