--- a/src/components/client/Home/Projects/style.module.scss
+++ b/src/components/client/Home/Projects/style.module.scss
@@ -16,6 +16,7 @@
         box-shadow: 0 2px 9px rgba(0, 0, 0, 0.17);
 
         .imagesContainer {
+            background-color: $lightColor;
             height: 250px;
             > div {
                 height: 100%;
