--- a/src/components/client/global/Footer/style.module.scss
+++ b/src/components/client/global/Footer/style.module.scss
@@ -62,7 +62,7 @@
                     color: $mainTextColor;
                     svg {
                         path {
-                            fill: $mainTextColor;
+                            fill: $lightColor;
                         }
                     }
                 }
