--- a/src/components/client/global/Header/LogoComponent/style.module.scss
+++ b/src/components/client/global/Header/LogoComponent/style.module.scss
@@ -5,6 +5,14 @@
     transition: all 0.3s ease-in-out;
     font-size: 24px;
     font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        width: 100%;
+        height: 40px;
+    }
     svg {
         path {
             fill: $mainTextColor;
@@ -16,6 +24,10 @@
         width: 100%;
         padding: 12px 0;
         border-bottom: 1.5px solid $secondaryTextColor;
+
+        img {
+            width: auto;
+        }
     }
 
     &:hover {
