--- a/src/components/client/global/Input/style.module.scss
+++ b/src/components/client/global/Input/style.module.scss
@@ -36,9 +36,11 @@
         border-radius: 10px;
         border: 1px solid $lightGrayBackgroundColor;
         outline: none;
+        resize: none;
 
         &::placeholder {
             color: $mainTextColor;
+            font-weight: 400;
         }
     }
 }
