Create login page

--- a/src/components/client/global/Header/LogoComponent/style.module.scss
+++ b/src/components/client/global/Header/LogoComponent/style.module.scss
@@ -26,6 +26,12 @@
         border-bottom: 1.5px solid $secondaryTextColor;
     }
 
+    &.externalPage {
+        img {
+            height: 60px;
+        }
+    }
+
     &:hover {
         color: $secondaryTextColor;
         svg {
