--- a/src/components/client/Login/Main/style.module.scss
+++ b/src/components/client/Login/Main/style.module.scss
@@ -3,7 +3,22 @@
 
 .main {
     position: relative;
+    overflow: hidden;
+    background: url("../../../Images/achievements_bg.jpeg") center no-repeat
+        fixed;
+    background-size: cover;
+
+    .overlay {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        background: hsla(0, 0%, 100%, 0.98);
+        z-index: 1;
+    }
+
     .container {
+        position: relative;
         min-height: 100dvh;
         @include container();
         padding-top: 60px;
@@ -12,5 +27,6 @@
         align-items: center;
         flex-direction: column;
         gap: 120px;
+        z-index: 2;
     }
 }
