--- a/src/components/client/Home/Services/style.module.scss
+++ b/src/components/client/Home/Services/style.module.scss
@@ -2,27 +2,64 @@
 @import "@/styles/partials/variables";
 
 .content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
     .card {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
+        gap: 15px;
         padding: 15px;
         background-color: $lightGrayBackgroundColor;
         color: $mainTextColor;
+        border: 1px solid $secondaryTextColor;
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 2px 9px rgba(0, 0, 0, 0.17);
-        min-height: 132px;
+        min-height: 200px;
 
-        p {
-            font-size: 18px;
-            font-weight: 400;
+        .subServices {
+            .subService {
+                font-size: 16px;
+                font-weight: 300;
+                .bullet {
+                    display: inline-flex;
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 50%;
+                    background-color: $secondaryBackgroundColor;
+                    margin-inline-end: 10px;
+                }
+            }
+        }
+
+        .text {
+            position: relative;
+            font-size: 20px;
+            font-weight: 500;
             text-align: center;
             display: -webkit-box;
             text-overflow: ellipsis;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
+
+            &::after {
+                content: "";
+                position: absolute;
+                right: 25%;
+                bottom: -4px;
+                width: 50%;
+                height: 2px;
+                background-color: $secondaryTextColor;
+                border-radius: 2px;
+            }
         }
+    }
+    @include responsive("lg") {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include responsive("sm") {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
