--- a/src/components/client/global/Section/style.module.scss
+++ b/src/components/client/global/Section/style.module.scss
@@ -11,6 +11,12 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+
+        .description {
+            font-size: 16px;
+            font-weight: 300;
+            text-align: center;
+        }
     }
 
     &.dark {
