--- a/src/components/client/Home/OurTeam/style.module.scss
+++ b/src/components/client/Home/OurTeam/style.module.scss
@@ -28,7 +28,7 @@
             .image {
                 max-width: 100%;
                 max-height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
         }
         .name {
