Make some changes in ui depend on client suggestion

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -74,3 +74,11 @@ select:focus,
 textarea {
     font-size: 16px !important;
 }
+
+.loadingPage {
+    width: 100dvw;
+    height: 100dvh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
