--- a/src/components/client/Home/Banner/style.module.scss
+++ b/src/components/client/Home/Banner/style.module.scss
@@ -6,7 +6,7 @@
     padding: 60px 0;
     height: calc(100dvh - 80px);
     color: $lightColor;
-    background: url("../../../Images/banner.jpg") center no-repeat fixed;
+    background: url("../../../Images/banner.jpeg") top no-repeat fixed;
     background-size: cover;
 
     .overlay {
@@ -14,7 +14,7 @@
         inset: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 18, 47, 0.8);
+        background-color: rgba(245, 245, 244, 0.8);
         z-index: 1;
     }
 
@@ -38,33 +38,19 @@
         @include container();
         height: 100%;
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        gap: 60px;
-        .content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 30px;
-            .title {
-                font-size: 48px;
-                font-weight: 700;
-            }
+        align-items: center;
 
-            .text {
-                font-size: 18px;
-                font-weight: 400;
-                width: 45%;
-            }
+        img {
+            object-fit: contain;
+            max-width: 400px;
         }
     }
 
-    @include responsive("md") {
+    @include responsive("sm") {
         .container {
-            .content {
-                .text {
-                    width: 100%;
-                }
+            img {
+                max-width: 300px;
             }
         }
     }
