--- a/src/components/client/global/Header/LogoComponent/style.module.scss
+++ b/src/components/client/global/Header/LogoComponent/style.module.scss
@@ -12,6 +12,10 @@
     img {
         width: auto;
         height: 40px;
+
+        &.withSlogan {
+            height: 100px;
+        }
     }
     svg {
         path {
