Changed position of background image in mobile

--- a/src/components/client/Home/Banner/style.module.scss
+++ b/src/components/client/Home/Banner/style.module.scss
@@ -48,6 +48,7 @@
     }
 
     @include responsive("sm") {
+        background-position: center;
         .container {
             img {
                 max-width: 300px;
