Added blogs page and blog page

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,6 +12,7 @@ $mainTextColor: #304e9d;
 $secondaryTextColor: #d69f5b;
 $grayTextColor: #f5f5f4;
 $lightGrayTextColor: #f9f9f9;
+$darkGrayTextColor: #6b6b6b;
 $lightColor: #fff;
 $darkColor: #000;
 
