--- a/src/components/client/Home/Services/style.module.scss
+++ b/src/components/client/Home/Services/style.module.scss
@@ -7,7 +7,8 @@
     gap: 15px;
     .card {
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         gap: 15px;
         padding: 15px;
         background-color: $lightGrayBackgroundColor;
@@ -16,7 +17,7 @@
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 2px 9px rgba(0, 0, 0, 0.17);
-        min-height: 200px;
+        min-height: 132px;
 
         .subServices {
             .subService {
