Added not-found page

--- a/src/components/global/LogoLoader/style.module.scss
+++ b/src/components/global/LogoLoader/style.module.scss
@@ -5,6 +5,7 @@
     .logoImage {
         object-fit: contain;
         width: 200px;
+        height: auto;
         animation: logoAnimation 1.5s infinite alternate ease-in-out;
     }
 
