Changed font size of message and vision text

--- a/src/components/client/Home/MessageAndVision/style.module.scss
+++ b/src/components/client/Home/MessageAndVision/style.module.scss
@@ -29,6 +29,7 @@
     @include responsive("md") {
         .content {
             .text {
+                font-size: 14px;
                 width: 100%;
             }
         }
