--- a/src/components/client/Services/Main/style.module.scss
+++ b/src/components/client/Services/Main/style.module.scss
@@ -12,18 +12,39 @@
         gap: 60px;
         padding-top: 30px;
 
-        .subServices {
+        .services {
             display: flex;
             flex-direction: column;
             gap: 30px;
             flex: 1;
-            .subService {
-                font-size: 18px;
-                font-weight: 300;
-                .bullet {
-                    display: inline-flex;
-                    color: $secondaryTextColor;
-                    margin-inline-end: 10px;
+
+            .service {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+
+                .serviceText {
+                    font-size: 18px;
+                    font-weight: 500;
+                }
+
+                .subServices {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    .subService {
+                        display: flex;
+                        flex: 1;
+                        .bullet {
+                            display: inline-flex;
+                            color: $secondaryTextColor;
+                            margin-inline-end: 10px;
+                        }
+                        .subServiceText {
+                            font-size: 16px;
+                            font-weight: 300;
+                        }
+                    }
                 }
             }
         }
