--- a/src/components/client/OurTeam/TeamMember/style.module.scss
+++ b/src/components/client/OurTeam/TeamMember/style.module.scss
@@ -34,6 +34,7 @@
 
                 .name {
                     font-size: 24px;
+                    text-align: center;
                 }
 
                 .role {
