--- a/src/components/client/OurTeam/style.module.scss
+++ b/src/components/client/OurTeam/style.module.scss
@@ -51,6 +51,7 @@
                     .name {
                         font-size: 18px;
                         font-weight: 700;
+                        text-align: center;
                         display: -webkit-box;
                         text-overflow: ellipsis;
                         -webkit-line-clamp: 1;
@@ -61,6 +62,7 @@
                     .role {
                         font-size: 12px;
                         font-weight: 500;
+                        text-align: center;
                         display: -webkit-box;
                         text-overflow: ellipsis;
                         -webkit-line-clamp: 1;
