--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $mainBackgroundColor: #ffffff;
 $secondaryBackgroundColor: #304e9d;
 $grayBackgroundColor: #f5f5f4;
 $lightGrayBackgroundColor: #f9f9f9;
+$darkGrayBackgroundColor: #6b6b6b;
 $darkBackgroundColor: #061d3e;
 
 /* text */
