--- a/src/components/client/Dashboard/global/DashboardHeader/style.module.scss
+++ b/src/components/client/Dashboard/global/DashboardHeader/style.module.scss
@@ -42,6 +42,43 @@
     }
 
     .controls {
+        position: fixed;
+        inset-inline-end: 30px;
+
+        .box {
+            .avatar {
+                background-color: $secondaryBackgroundColor;
+                text-transform: uppercase;
+                font-size: 16px;
+            }
+
+            .menu {
+                ul {
+                    padding: 0 !important;
+
+                    .listItem {
+                        color: $mainTextColor;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        padding: 10px 16px;
+
+                        .listItemIcon {
+                            justify-content: flex-end;
+                            .icon {
+                                fill: $mainTextColor;
+                                width: 24px;
+                                height: 24px;
+                            }
+                        }
+                    }
+
+                    hr {
+                        margin: 0;
+                    }
+                }
+            }
+        }
     }
 
     &.openSideMenu {
