--- a/src/components/client/Dashboard/global/DynamicForm/style.module.scss
+++ b/src/components/client/Dashboard/global/DynamicForm/style.module.scss
@@ -8,6 +8,10 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
+
+        &.blogsPage {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 
     .buttonContainer {
