--- a/src/components/client/OurTeam/style.module.scss
+++ b/src/components/client/OurTeam/style.module.scss
@@ -7,7 +7,6 @@
     position: relative;
     z-index: 1;
     .container {
-        @include container();
         display: flex;
         flex-direction: column;
         gap: 60px;
@@ -21,6 +20,7 @@
                 grid-template-columns: repeat(4, 1fr);
                 gap: 30px;
                 .card {
+                    position: relative;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -101,6 +101,15 @@
                     grid-template-columns: repeat(1, 1fr);
                 }
             }
+        }
+    }
+
+    &.inDashboard {
+        padding-top: 0;
+    }
+    &.notInDashboard {
+        .container {
+            @include container();
         }
     }
 }
