--- a/src/components/client/global/Section/style.module.scss
+++ b/src/components/client/global/Section/style.module.scss
@@ -7,7 +7,6 @@
     z-index: 1;
 
     .container {
-        @include container();
         display: flex;
         flex-direction: column;
         gap: 30px;
@@ -22,5 +21,14 @@
     &.dark {
         background: linear-gradient(to right, $darkBackgroundColor, #082753);
         color: $lightColor;
+    }
+    &.inDashboard {
+        padding: 0;
+    }
+
+    &.notInDashboard {
+        .container {
+            @include container();
+        }
     }
 }
