Created services page and contact form

--- a/src/components/client/Services/Main/style.module.scss
+++ b/src/components/client/Services/Main/style.module.scss
@@ -2,7 +2,7 @@
 @import "@/styles/partials/variables";
 
 .main {
-    padding-top: calc(80px + 60px);
+    padding-top: 80px;
     padding-bottom: 60px;
     position: relative;
     z-index: 1;
