--- a/src/components/client/global/ControlsOverlay/style.module.scss
+++ b/src/components/client/global/ControlsOverlay/style.module.scss
@@ -9,6 +9,7 @@
     overflow: hidden;
     opacity: 0;
     transition: 0.5s ease-in-out;
+    z-index: 1;
 
     .controls {
         display: flex;
